--- a/lab/test/CMakeLists.txt
+++ b/lab/test/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(lp-creation)
 add_subdirectory(serialization)
 add_subdirectory(sum-sqc)
 add_subdirectory(objective-value)
+add_subdirectory(opt-model)
