--- a/app/CApplications/generate-shapes/CMakeLists.txt
+++ b/app/CApplications/generate-shapes/CMakeLists.txt
@@ -1,19 +1,20 @@
 cmake_minimum_required(VERSION 3.2)
 project(generate-shapes)
 
-
+find_package(OpenCV REQUIRED)
 add_executable(generate-shapes generate-shapes.cpp)
-add_dependencies(generate-shapes initialization)
+if(${USE_REMOTE_REPOSITORIES})
+    add_dependencies(generate-shapes dipacus)
+endif()
 
 target_include_directories(generate-shapes PRIVATE
-        ${CMAKE_SOURCE_DIR}/modules/initialization/include
         ${DIPACUS_INCLUDE_DIRS}
         ${DGTAL_INCLUDE_DIRS})
 
 target_link_libraries(generate-shapes
-        -linitialization
         -ldipacus-base
         -lboost_system
         -lboost_filesystem
-        ${DGTAL_LIBRARIES})
+        ${DGTAL_LIBRARIES}
+        ${OpenCV_LIBS})
 
